--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,55 +1,55 @@
-<!--<div-->
-<!--    class=" px-10   sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">-->
+<div
+    class=" px-10   sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
 
-<!--    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}"-->
-<!--                   animationDuration="200ms"-->
-<!--                   class="pt-3 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3"-->
-<!--                   style="flex-direction: column; overflow-y: scroll" style="background-color: white;">-->
-<!--        <ng-container *ngFor="let item of userGroup">-->
+    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}"
+                   animationDuration="200ms"
+                   class="pt-3 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3"
+                   style="flex-direction: column; overflow-y: scroll" style="background-color: white;">
+        <ng-container *ngFor="let item of userGroup">
 
-<!--            <mat-tab *ngIf=" item.ProfileID==mco_profile_id" label="MCO" ng-disable="visibleFlag">-->
-<!--                <app-mco-dashborad [ProfileID]="item.ProfileID"></app-mco-dashborad>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf=" item.ProfileID==mco_profile_id" label="MCO" ng-disable="visibleFlag">
+                <app-mco-dashborad [ProfileID]="item.ProfileID"></app-mco-dashborad>
+            </mat-tab>
 
-<!--            <mat-tab *ngIf="item.ProfileID==ro_profile_id" label="Recovery Officer">-->
-<!--                <app-recovery-officer-dashboard [ProfileID]="item.ProfileID"></app-recovery-officer-dashboard>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf="item.ProfileID==ro_profile_id" label="Recovery Officer">
+                <app-recovery-officer-dashboard [ProfileID]="item.ProfileID"></app-recovery-officer-dashboard>
+            </mat-tab>
 
-<!--            <mat-tab *ngIf="item.ProfileID ==bm_profile_id" label="Branch Manager">-->
-<!--                <app-branch-manager-dashboard [ProfileID]="item.ProfileID"></app-branch-manager-dashboard>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf="item.ProfileID ==bm_profile_id" label="Branch Manager">
+                <app-branch-manager-dashboard [ProfileID]="item.ProfileID"></app-branch-manager-dashboard>
+            </mat-tab>
 
-<!--            <mat-tab *ngIf="item.ProfileID ==zc_profile_id" label="Zonal Chief">-->
-<!--                <app-zonal-chief-dashboard [ProfileID]="item.ProfileID"></app-zonal-chief-dashboard>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf="item.ProfileID ==zc_profile_id" label="Zonal Chief">
+                <app-zonal-chief-dashboard [ProfileID]="item.ProfileID"></app-zonal-chief-dashboard>
+            </mat-tab>
 
-<!--            <mat-tab *ngIf="item.ProfileID ==evp_od_profile_id" label="EVP (Operations Division)">-->
-<!--                <app-evp-od-dashboard [ProfileID]="item.ProfileID"></app-evp-od-dashboard>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf="item.ProfileID ==evp_od_profile_id" label="EVP (Operations Division)">
+                <app-evp-od-dashboard [ProfileID]="item.ProfileID"></app-evp-od-dashboard>
+            </mat-tab>
 
-<!--            <mat-tab *ngIf="item.ProfileID ==evp_cd_profile_id" label="EVP (Credit Division)">-->
-<!--                <app-evp-credit-dashboard [ProfileID]="item.ProfileID"></app-evp-credit-dashboard>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf="item.ProfileID ==evp_cd_profile_id" label="EVP (Credit Division)">
+                <app-evp-credit-dashboard [ProfileID]="item.ProfileID"></app-evp-credit-dashboard>
+            </mat-tab>
 
-<!--            <mat-tab *ngIf="item.ProfileID ==recovery_sam_profile_id" label="EVP (Recovery & SAM Division)">-->
-<!--                <app-recovery-sam-division [ProfileID]="item.ProfileID"></app-recovery-sam-division>-->
-<!--            </mat-tab>-->
+            <mat-tab *ngIf="item.ProfileID ==recovery_sam_profile_id" label="EVP (Recovery & SAM Division)">
+                <app-recovery-sam-division [ProfileID]="item.ProfileID"></app-recovery-sam-division>
+            </mat-tab>
 
-<!--            &lt;!&ndash;            <mat-tab label="Resourccs Aveilable" *ngIf="item.ProfileID =='75'">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <app-recovery-available [ProfileID]="item.ProfileID"></app-recovery-available>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </mat-tab>&ndash;&gt;-->
+            <!--            <mat-tab label="Resourccs Aveilable" *ngIf="item.ProfileID =='75'">-->
+            <!--                <app-recovery-available [ProfileID]="item.ProfileID"></app-recovery-available>-->
+            <!--            </mat-tab>-->
 
-<!--            <mat-tab *ngIf="item.ProfileID ==pz_profile_id" label="President ZTBL">-->
-<!--                <app-president-ztbl [ProfileID]="item.ProfileID"></app-president-ztbl>-->
-<!--            </mat-tab>-->
-<!--            <mat-tab *ngIf="item.ProfileID ==rc_profile_id" label="Regional Chief">-->
-<!--                <app-regional-cheif [ProfileID]="item.ProfileID"></app-regional-cheif>-->
-<!--            </mat-tab>-->
-<!--            <mat-tab *ngIf="item.ProfileID ==pc_profile_id" label="Provincial Chief ">-->
-<!--                <app-provincial-chief [ProfileID]="item.ProfileID"></app-provincial-chief>-->
-<!--            </mat-tab>-->
-<!--        </ng-container>-->
-<!--    </mat-tab-group>-->
+            <mat-tab *ngIf="item.ProfileID ==pz_profile_id" label="President ZTBL">
+                <app-president-ztbl [ProfileID]="item.ProfileID"></app-president-ztbl>
+            </mat-tab>
+            <mat-tab *ngIf="item.ProfileID ==rc_profile_id" label="Regional Chief">
+                <app-regional-cheif [ProfileID]="item.ProfileID"></app-regional-cheif>
+            </mat-tab>
+            <mat-tab *ngIf="item.ProfileID ==pc_profile_id" label="Provincial Chief ">
+                <app-provincial-chief [ProfileID]="item.ProfileID"></app-provincial-chief>
+            </mat-tab>
+        </ng-container>
+    </mat-tab-group>
 
 
-<!--</div>-->
+</div>
