--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -54,27 +54,10 @@
 
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
-            <!--            <languages></languages>-->
-            <!-- <fuse-fullscreen class="hidden md:block"></fuse-fullscreen> -->
-            <!--            <search [appearance]="'bar'"></search>-->
-            <!--            <shortcuts></shortcuts>-->
-            <!--            <messages></messages>-->
-            <notification *ngIf="IsIconVisable('/notifications/notification-details')"></notification>
+            <notification *ngIf="isViewNotification"></notification>
+            <violations *ngIf="isViewViolations"></violations>
+            <mapping-request *ngIf="isViewMapping"></mapping-request>
 
-            <violations *ngIf="IsIconVisable('/mapping-violation')"></violations>
-
-            <mapping-request *ngIf="IsIconVisable('/mapping-request')"></mapping-request>
-
-
-            <!-- <notifications></notifications> -->
-
-
-            <!--            <button-->
-            <!--                class="lg:hidden"-->
-            <!--                mat-icon-button-->
-            <!--                (click)="quickChat.toggle()">-->
-            <!--                <mat-icon [svgIcon]="'heroicons_outline:chat-alt-2'"></mat-icon>-->
-            <!--            </button>-->
             <user></user>
         </div>
     </div>
